Update maven pom files