@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.kyligence.kap</groupId>
-	<artifactId>kap</artifactId>
-	<packaging>pom</packaging>
+    <artifactId>kap</artifactId>
+    <packaging>pom</packaging>
     <version>0.1-SNAPSHOT</version>
 
     <name>KAP:KyligenceAnalyticsPlatform</name>
@@ -522,8 +522,8 @@
     </build>
 
     <modules>
-    	<module>kylin</module>
-    	<module>extensions/sample</module>
+        <module>kylin</module>
+        <module>extensions/sample</module>
         <module>extensions/core-cube</module>
         <module>extensions/query</module>
         <module>extensions/storage-hbase</module>
@@ -531,4 +531,65 @@
         <module>extensions/assembly</module>
     </modules>
 
+    <profiles>
+        <profile>
+            <id>sandbox</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>2.5.1</version>
+                        <configuration>
+                            <fork>true</fork>
+                            <meminitial>1024m</meminitial>
+                            <maxmem>2048m</maxmem>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <reportsDirectory>${project.basedir}/../../target/surefire-reports</reportsDirectory>
+                            <excludes>
+                                <exclude>**/IT*.java</exclude>
+                            </excludes>
+                            <systemProperties>
+                                <property>
+                                    <name>useSandbox</name>
+                                    <value>false</value>
+                                </property>
+                                <property>
+                                    <name>buildCubeUsingProvidedData</name>
+                                    <value>false</value>
+                                </property>
+                            </systemProperties>
+                            <argLine>-Xmx4G -XX:MaxPermSize=512M</argLine>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-report-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <configuration>
+                            <linkXRef>false</linkXRef>
+                            <aggregate>true</aggregate>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jxr-plugin</artifactId>
+                        <version>2.3</version>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
